# xgks

./: CMakeLists.txt  CMakePresets.json  Makefile.AIX  README
.github/workflows/: cmake.yml
demo/: CMakeLists.txt  Makefile.AIX  font.c  pmark.c  usa.c
demo/Logo/: CMakeLists.txt  Makefile  Makefile.AIX  demo.c  printer.c  ramtek.c  s9000.c
demo/example/: Imakefile
demo/gksdemo/: Imakefile  Makefile  Makefile.AIX  gksdemo.f  gkspar.inc  star.f
demo/sledsrc/: CMakeLists.txt  add_objects.c  attributes.c  attributes.h  clr_sel_draw.c  clr_sel_draw.h  clr_sel_exec.c  clr_sel_func.h  clr_sel_key.h  clr_selector.h  color.c  color.h  conversions.c  conversions.h  defs.h  draw.c  draw.h  draw_menu.c  draw_menu.h  draw_palette.c  edit_picture.c  func.h  functbl.h  grid.c  init_tbls.c  input.c  key.h  menu.c  menu.h  obj_rotate.c  object_defs.h  object_list.h  object_tbl.h  objects.h  objects_copy.c  objects_func.h  palette.h  photo.c  photodummy.c  picture.c  (+10 more)
demo/stratego/: blue.c  red.c
demo/xhib/: xhib.f
fontdb/: CMakeLists.txt  rshowfont.c
include/: event.h  fillarea.h  font.h  gks_defines.h  gks_errors.h  gks_implem.h  gkserrmsg.h  gkslist.h  input.h  metafile.h  polylines.h  polymarkers.h  primitive.h  text.h  wdt.h  wslist.h  xgks.h
lib/fortran/: control.c  error.c  escapes.c  fortmac.h  fortxgks.h  gerhnd.c  inputevent.c  inputinit.c  inputmode.c  inputreq.c  inputsamp.c  inqerrlist.c  inqgksdesc.c  inqgkslist.c  inqlun.f  inqpixel.c  inqseglist.c  inqstate.c  inqwsdesc.c  inqwslist.c  meta.c  output.c  pdrutils.h  ps2aixdefs.h  rep.c  segattr.c  segment.c  (+3 more)
(+17 files in other folders)
